--- a/Project/2_Skill_Demand.ipynb
+++ b/Project/2_Skill_Demand.ipynb
@@ -1589,8 +1589,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
